--- a/Droid/XamarinSample.Droid.csproj
+++ b/Droid/XamarinSample.Droid.csproj
@@ -159,6 +159,7 @@
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="packages.config" />
+    <None Include="apikey.xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
