--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="22" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<application android:label="XamarinSample" android:icon="@drawable/ic_launcher">
-		<meta-data android:name="near_api_key" android:value="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiI4ZTUzYTIwNWE4MDQ0YTZlOWFjODllYWZmZWI4YjJkMSIsImlhdCI6MTUwNzcwOTEwMCwiZXhwIjoxNjMzOTk2Nzk5LCJkYXRhIjp7ImFjY291bnQiOnsiaWQiOiIwMTczOWQwNS1kYzZmLTRjMGYtODA0Ni03MmFkYWM1Mzk1ZjUiLCJyb2xlX2tleSI6ImFwcCJ9fX0.P1yEbi3dXHiLVAtJWiNSRqA6MJRGBxXbFD-ENLt7R7w" />
+		<meta-data android:name="near_api_key" android:value="@string/apiKey" />
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver" android:exported="false" />
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
